syntax = "proto3";

package protos;
option go_package = "github.com/Drinnn/aim-trainer-ms/highscore/protos";

message SetHighscoreResponse {
    bool set = 1;
}